--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
-    <title>富卡</title>
+    <title>立马有钱</title>
     <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
   </head>
   <body>
