--- a/index.html
+++ b/index.html
@@ -15,7 +15,23 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      loading...
+    </div>
     <!-- built files will be auto injected -->
+    <!-- CODELAB: Add the install script here -->
+    <script src="/install.js"></script>
+    <script>
+      // CODELAB: Register service worker.
+      // 注册服务人员
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js')
+            .then((reg) => {
+              console.log('Service worker registered.', reg);
+            });
+        });
+      }
+    </script>
   </body>
 </html>
