--- a/index.html
+++ b/index.html
@@ -13,8 +13,23 @@
     <meta name="description" content="A sample p2p app">
     <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <meta name="theme-color" content="#ffffff" />
+    <style>
+      #butInstall {
+        width: 0.48rem;
+        height: 0.48rem;
+        background: url("/images/install.svg") center center no-repeat;
+        background-size: contain;
+        position: absolute;
+        top: 0.2rem;
+        right: 0.2rem;
+        z-index: 10;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
+
+    <button id="butInstall" aria-label="Install"></button>
     <div id="app">
       loading...
     </div>
