--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
 
-    <button id="butInstall" aria-label="Install"></button>
+    <button id="butInstall" aria-label="Install" hidden></button>
     <div id="app">
       loading...
     </div>
