--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="white">
     <meta name="apple-mobile-web-app-title" content="立马有钱PWA版">
-    <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png">
+    <link rel="apple-touch-icon" href="/images/favicon152.png">
     <meta name="description" content="A sample p2p app">
     <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <meta name="theme-color" content="#ffffff" />
