--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         });
       }
     </script>
-    <script>
-      document.body.addEventListener('touchmove', function (e) {
-        e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
-      }, {passive: false}); //passive 参数不能省略，用来兼容ios和android
-    </script>
+    <!--<script>-->
+      <!--document.body.addEventListener('touchmove', function (e) {-->
+        <!--e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)-->
+      <!--}, {passive: false}); //passive 参数不能省略，用来兼容ios和android-->
+    <!--</script>-->
   </body>
 </html>
