--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
-    <title>立马有钱PWA版</title>
+    <title>立马有钱</title>
     <link rel="manifest" href="/manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="white">
-    <meta name="apple-mobile-web-app-title" content="立马有钱PWA版">
+    <meta name="apple-mobile-web-app-title" content="立马有钱">
     <link rel="apple-touch-icon" href="/images/favicon152.png">
     <meta name="description" content="A sample p2p app">
     <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
@@ -17,7 +17,7 @@
       #butInstall {
         width: 0.48rem;
         height: 0.48rem;
-        background: url("/images/install.svg") center center no-repeat;
+        background: url("/public/images/install.svg") center center no-repeat;
         background-size: contain;
         position: absolute;
         top: 0.2rem;
