--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
     <title>立马有钱</title>
     <link rel="manifest" href="/manifest.json">
+    <!--apple-->
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="white">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="立马有钱">
     <link rel="apple-touch-icon" href="/images/favicon152.png">
     <meta name="description" content="A sample p2p app">
+    <!--weChat-->
+    <meta property="og:title" content="立马有钱"/>
+    <meta property="og:description" content="一个基于Vue的渐进式网页应用PWA"/>
+    <meta property="og:image" content="https://p2p.liqiuqi.cn/favicon.png"/>
+
     <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="/assets/style.css">
@@ -19,7 +25,7 @@
     <button id="butInstall" class="animated pulse" aria-label="Install" hidden></button>
     <div id="app">
       <div class="pre-content">
-        <img src="/images/loading.gif" height="100" width="100"/>
+        <img src="/images/loading.gif" height="50" width="50"/>
       </div>
     </div>
     <!-- built files will be auto injected -->
