--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="/manifest.json">
     <!--apple-->
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="white">
     <meta name="apple-mobile-web-app-title" content="立马有钱">
     <link rel="apple-touch-icon" href="/images/favicon152.png">
     <meta name="description" content="A sample p2p app">
