--- a/index.html
+++ b/index.html
@@ -11,11 +11,22 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="white">
     <meta name="apple-mobile-web-app-title" content="立马有钱">
     <link rel="apple-touch-icon" href="/images/favicon152.png">
-    <meta name="description" content="A sample p2p app">
+    <meta name="description" content="一个基于Vue的渐进式网页应用PWA">
     <!--weChat-->
     <meta property="og:title" content="立马有钱"/>
     <meta property="og:description" content="一个基于Vue的渐进式网页应用PWA"/>
     <meta property="og:image" content="https://p2p.liqiuqi.cn/favicon.png"/>
+
+    <meta name="description" Content="一个基于Vue的渐进式网页应用PWA">
+    <meta
+      name="sharecontent"
+      data-msg-img="https://p2p.liqiuqi.cn/favicon.png"
+      data-msg-title="立马有钱"
+      data-msg-content="一个基于Vue的渐进式网页应用PWA"
+      data-msg-callBack=""
+      data-line-img="https://p2p.liqiuqi.cn/favicon.png"
+      data-line-title="立马有钱"
+      data-line-callBack=""/>
 
     <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <meta name="theme-color" content="#ffffff" />
